--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -1,14 +1,11 @@
 /* Variables */
 
-$primary-color: ;
-$secondary-color: ;
-$third-color: ;
-$body-color: ;
+$primary-color: #9356DC;
+$secondary-color: #FF79DA;
+$third-color: #99E2D0;
 $text-light: white;
 $text-dark: black;
-$footer-back: ;
-$font-title: ;
-$font-text: ;
-$back-input: ;
+$background: rgb(245, 245, 245);
+
 
 
