--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -6,3 +6,36 @@
     outline: none;
 }
 
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+}
+
+.heading{
+    &--h1{
+        font-size: 24px;
+        text-align: center;
+        padding: 0 30px 15px 30px;
+    }
+    &--h2{
+        margin-bottom: 25px;
+    }
+}
+
+.text{
+    &--search{
+        text-align: center;
+        margin-bottom: 15px; 
+        font-size: 18px;
+        font-weight: 200;
+    }
+}
+
+.a{
+    color: black;
+    text-decoration: none;
+    &--explo{
+        color: white;
+    }
+    
+}
