--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -1,51 +1,27 @@
-/* Header */
-
-.logo
-{
-    width: 25%;
-    display: flex;
-    align-items: center; 
-}
-.logo__img
-{
-    height: 80px;
-}
-.logo__textlogo
-{
+.header{
+    padding-top: 25px;
+    padding-bottom: 10px;
     text-align: center;
-}
-  
-/* Navigation*/ 
+    &__arrow{
+        display: none;
+    }
+    &__logo{
+            &__a{
+                position: relative;
 
-.barnav__ul
-   {
-       display: flex;
-       justify-content: flex-end;
-       align-items: center;
-       margin-left: auto;
-   }
-       
-.barnav__li
-   {
-       list-style: none;
-       margin-right: 20px;
-   }
-        
-.barnav__a
-   {
-       text-decoration: none;
-       text-transform: uppercase;
-       color: ;
-       font-size: 14px;
-       font-weight: bold;    
-   }
-           
-.barnav__a:hover
-   {
-       color: ;
-   }
-   
-.barnav__a--active
-   {
-               color: ;
-   }
+            }
+            &__img{
+                max-width: 45%; 
+            }
+    }
+}
+
+.local{
+    position: absolute;
+    left: 0;
+    top: 45px;
+    display: flex;
+    &__i{
+        margin-right: 20px;
+    }
+}
