--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -6,6 +6,8 @@ $third-color: #99E2D0;
 $text-light: white;
 $text-dark: black;
 $background: rgb(245, 245, 245);
+$padding-section: 40px 20px 50px 20px;
+$box-shadow : 0 3px 10px rgb(173, 173, 173)
 
 
 
