--- a/css/main.css
+++ b/css/main.css
@@ -18,15 +18,37 @@ body {
   text-align: center;
   padding: 0 30px 15px 30px;
 }
-.heading--h2 {
+.heading--h2--fonction {
   margin-bottom: 25px;
 }
+.heading--h2--resto {
+  margin-bottom: 20px;
+}
+.heading--h3 {
+  margin-bottom: 6px;
+}
 
+.text--local {
+  font-size: 1.1em;
+}
 .text--search {
   text-align: center;
   margin-bottom: 15px;
   font-size: 18px;
   font-weight: 200;
+}
+.text--resto {
+  font-size: 1.1em;
+  font-weight: 500;
+}
+.text--nouveau {
+  font-weight: 600;
+  color: #278870;
+  font-size: 0.85em;
+}
+
+.li {
+  list-style-type: none;
 }
 
 .a {
@@ -55,6 +77,33 @@ body {
   text-align: center;
 }
 
+/* Icones téléchargés */
+.ico--local {
+  height: 17px;
+  margin-right: 20px;
+}
+.ico--fonction {
+  width: 20px;
+  height: 24px;
+  filter: invert(54%) sepia(4%) saturate(31%) hue-rotate(336deg) brightness(90%) contrast(91%);
+}
+.ico--footer {
+  filter: invert(100%) sepia(1%) saturate(0%) hue-rotate(65deg) brightness(111%) contrast(101%);
+  margin-right: 10px;
+}
+.ico--footer--1 {
+  width: 10px;
+}
+.ico--footer--2 {
+  width: 13px;
+  transform: rotateY(30%);
+}
+
+/* Icones en ligne Font Awesomr */
+.fa-heart {
+  font-size: 25px;
+}
+
 .header {
   padding-top: 25px;
   padding-bottom: 10px;
@@ -73,27 +122,27 @@ body {
 .local {
   position: absolute;
   left: 0;
-  top: 45px;
+  top: 42px;
   display: flex;
-}
-.local__i {
-  margin-right: 20px;
+  align-items: baseline;
 }
 
+/* SECTION EXPLO */
 .background {
   height: 50px;
   background-color: #e9e8e8;
 }
 
 .explo {
-  padding: 40px 25px 50px 25px;
+  padding: 40px 20px 50px 20px;
   background-color: whitesmoke;
 }
 
-.barnav {
-  margin: 40px 13px 50px 25px;
+/* SECTION FONCTION */
+.fonction {
+  padding: 40px 20px 50px 30px;
 }
-.barnav__li {
+.fonction__li {
   position: relative;
   display: flex;
   align-items: center;
@@ -103,7 +152,13 @@ body {
   background-color: whitesmoke;
   border-radius: 20px;
 }
-.barnav__li__num {
+.fonction__li:hover {
+  background-color: #f2eafb;
+}
+.fonction__li:hover .ico {
+  filter: invert(43%) sepia(66%) saturate(4357%) hue-rotate(245deg) brightness(93%) contrast(85%);
+}
+.fonction__li__num {
   width: 24px;
   height: 24px;
   top: 22px;
@@ -117,17 +172,92 @@ body {
   color: white;
   font-size: 14px;
 }
-.barnav__li__div {
+.fonction__li__div {
   width: 40px;
   display: flex;
   align-items: center;
 }
-.barnav__li__fas {
-  font-size: 16px;
-  color: grey;
+
+/* SECTION RESTO */
+.resto {
+  padding: 40px 20px 50px 20px;
+  background-color: whitesmoke;
 }
-.barnav__li__fas__tel {
-  margin: 6px 0;
+.resto__li {
+  margin-bottom: 20px;
+}
+.resto__a__top {
+  height: 170px;
+  border-radius: 15px 15px 0 0;
+  box-shadow: 0 3px 10px #adadad;
+}
+.resto__a__top__1 {
+  position: relative;
+  background: url(/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg) no-repeat;
+  background-size: cover;
+  background-position: bottom center;
+}
+.resto__a__top__2 {
+  position: relative;
+  background: url(/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg) no-repeat;
+  background-size: cover;
+  background-position: center -145px;
+}
+.resto__a__top__3 {
+  background: url(/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg) no-repeat;
+  background-size: cover;
+  background-position: center -50px;
+}
+.resto__a__top__4 {
+  background: url(/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg) no-repeat;
+  background-size: cover;
+  background-position: center -55px;
+}
+.resto__a__bottom {
+  height: 80px;
+  position: relative;
+  background: white;
+  border-radius: 0 0 15px 15px;
+  box-shadow: 0 3px 10px #adadad;
+  padding: 15px 20px 15px 10px;
+}
+.resto__a__divico {
+  position: absolute;
+  right: 25px;
+  top: 20px;
+}
+
+.nouveau {
+  width: 80px;
+  height: 29px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  right: 15px;
+  top: 13px;
+  background-color: #99E2D0;
+  border-radius: 2px;
+  box-shadow: 0 3px 10px #adadad;
+}
+
+.footer {
+  background-color: #353535;
+  padding: 25px 20px;
+}
+.footer__logo {
+  height: 17px;
+  filter: invert(100%) sepia(1%) saturate(0%) hue-rotate(65deg) brightness(111%) contrast(101%);
+}
+.footer__nav {
+  margin-top: 13px;
+}
+.footer__li {
+  display: flex;
+  margin-bottom: 5px;
+}
+.footer__li__a {
+  color: white;
 }
 
 /*# sourceMappingURL=main.css.map */
