--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,7 +2,9 @@
 @import "./utils/variables";
 @import "./base/base";
 @import "./components/buttons";
+@import "./components/icons";
 @import "./layouts/header";
 @import "./pages/accueil";
+@import "./layouts/footer";
 
 
