--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,6 +5,7 @@
 @import "./components/icons";
 @import "./layouts/header";
 @import "./pages/accueil";
+@import "./pages/lapalettedugout";
 @import "./layouts/footer";
 
 
