--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -14,22 +14,40 @@ body{
 .heading{
     &--h1{
         font-size: 24px;
+        &--explo{
         text-align: center;
         padding: 0 30px 15px 30px;
+        }
+        &--commande{
+            margin-bottom: 40px;
+            font-size: 30px;
+            font-weight: bolder;
+            font-style: italic;
+        }
     }
     &--h2{
         &--fonction {
             margin-bottom: 25px;
         }
         &--resto{
-            margin-bottom: 20px;
-            
+            margin-bottom: 20px;  
+        }
+        &--entree{
+            margin-bottom: 25px;
+            font-size: 18px;
+            text-transform: uppercase;
+            font-weight: 300;
         }
 
     }
     &--h3{
         margin-bottom: 6px;
+        &--commande{
+            font-size: 17px;
+            font-weight: 600;
+        }
     }
+    
 }
 
 .text{
@@ -50,6 +68,9 @@ body{
         font-weight: 600;
         color: darken($third-color, 40%);
         font-size: 0.85em;
+    }
+    &--commande{
+        font-weight: bold;
     }
 }
 
