--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -1,10 +1,8 @@
 .header{
+    height: 68px;
     padding-top: 25px;
     padding-bottom: 10px;
     text-align: center;
-    &__arrow{
-        display: none;
-    }
     &__logo{
             &__a{
                 position: relative;
