--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -2,20 +2,29 @@
 {
     display: block;
     margin: auto;
-    background-color: $primary-color;
+    background-image: linear-gradient(to top, $primary-color, $secondary-color);
     border-radius: 25px;
     padding: 15px;
     color: white;
     cursor: pointer;
+    text-align: center;
+    &--explo
+    {
+        width: 70%;
+        margin-top: 30px; 
+    }
+    &--commande
+    {
+        width: 55%;
+    }
     &:hover
     {
-        background-color: $secondary-color;
+        background-image: linear-gradient(to top, $secondary-color, $primary-color);
+        transform: scale(1.05);
     }
-    &--explo{
-        width: 70%;
-        margin-top: 30px;
-        text-align: center;
-
+    &:hover a
+    {
+        transform: scale(1.05);
     }
 }
 
