--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,8 +4,9 @@
 @import "./components/buttons";
 @import "./components/icons";
 @import "./layouts/header";
-@import "./pages/accueil";
-@import "./pages/lapalettedugout";
+@import "./pages/index";
+@import "./layouts/page_menu";
 @import "./layouts/footer";
+
 
 
