--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -28,4 +28,26 @@
     }
 }
 
+@media (min-width: 600px)
+{
+    .button
+    {
+        &--explo
+        {
+            max-width: 40%;
+        }
+    }
+}
+
+@media (min-width: 1100px)
+{
+    .button
+    {
+        &--explo
+        {
+            max-width: 25%;
+        }
+    }
+}
+
 
