--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -123,7 +123,47 @@
     box-shadow: $box-shadow;
 }
 
+@media (min-width: 600px)
+{
+    .fonction, .heading--h2--resto, .resto__ul
+    {
+        max-width: 60%;
+        margin: auto;
+    }
+    .heading--h2--resto
+    {
+        margin-bottom: 20px;
+    }
+    .footer__logo, .footer__nav
+    {
+        max-width: 60%;
+        margin-left: 20%;
+        
+    }
+}
 
+@media (min-width: 1100px)
+{
+    .fonction, .heading--h2--resto, .resto__ul
+    {
+        max-width: 30%;
+        margin: auto;
+    }
+    .fonction{
+        text-align: center;
+    }
+
+    .heading--h2--resto
+    {
+        margin-bottom: 20px;
+    }
+    .footer__logo, .footer__nav
+    {
+        max-width: 50%;
+        margin-left: 35%;
+        
+    }
+}
 
 
 
