--- a/css/main.css
+++ b/css/main.css
@@ -114,7 +114,7 @@ body {
 }
 @media (min-width: 1100px) {
   .button--explo {
-    max-width: 25%;
+    max-width: 20%;
   }
 }
 /* Icones téléchargés */
@@ -303,11 +303,6 @@ body {
   .heading--h2--resto {
     margin-bottom: 20px;
   }
-
-  .footer__logo, .footer__nav {
-    max-width: 60%;
-    margin-left: 20%;
-  }
 }
 @media (min-width: 1100px) {
   .fonction, .heading--h2--resto, .resto__ul {
@@ -315,17 +310,12 @@ body {
     margin: auto;
   }
 
-  .fonction {
-    text-align: center;
+  .resto__a__top {
+    height: 200px;
   }
 
   .heading--h2--resto {
     margin-bottom: 20px;
-  }
-
-  .footer__logo, .footer__nav {
-    max-width: 50%;
-    margin-left: 35%;
   }
 }
 /* SECTION PLATPHOTO  */
@@ -440,6 +430,35 @@ body {
   opacity: 1;
 }
 
+@media (min-width: 600px) {
+  .heading--h1--commande {
+    display: inline-block;
+    margin-right: 20px;
+    margin-left: 20%;
+  }
+
+  .commande__divico {
+    position: initial;
+    display: inline-block;
+  }
+
+  .carte {
+    max-width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media (min-width: 1100px) {
+  .carte {
+    max-width: 40%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .heading--h1--commande {
+    margin-left: 30%;
+  }
+}
 .footer {
   padding: 25px 20px;
   background-color: #353535;
@@ -457,6 +476,19 @@ body {
 }
 .footer__li__a {
   color: white;
+}
+
+@media (min-width: 600px) {
+  .footer__logo, .footer__nav {
+    max-width: 60%;
+    margin-left: 20%;
+  }
+}
+@media (min-width: 1100px) {
+  .footer__logo, .footer__nav {
+    max-width: 50%;
+    margin-left: 35%;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
