--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -18,4 +18,23 @@
     }
 }
 
+@media (min-width: 600px)
+{
+    .footer__logo, .footer__nav
+    {
+        max-width: 60%;
+        margin-left: 20%;
+    }
+}
+
+@media (min-width: 1100px)
+{
+    .footer__logo, .footer__nav
+    {
+        max-width: 50%;
+        margin-left: 35%;
+        
+    }
+}
+
 
