--- a/scss/layouts/_page_menu.scss
+++ b/scss/layouts/_page_menu.scss
@@ -126,3 +126,37 @@
     }
 }
 
+@media (min-width: 600px)
+{
+    .heading--h1--commande
+    {
+        display: inline-block;  
+        margin-right: 20px;
+        margin-left: 20%;
+    }
+    .commande__divico
+    {
+        position: initial;
+        display: inline-block;
+    }
+    .carte
+    {
+        max-width: 60%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+@media (min-width: 1100px)
+{
+    .carte
+    {
+        max-width: 40%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .heading--h1--commande
+    {
+        margin-left: 30%;
+    }
+}
