--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -134,12 +134,6 @@
     {
         margin-bottom: 20px;
     }
-    .footer__logo, .footer__nav
-    {
-        max-width: 60%;
-        margin-left: 20%;
-        
-    }
 }
 
 @media (min-width: 1100px)
@@ -149,19 +143,13 @@
         max-width: 30%;
         margin: auto;
     }
-    .fonction{
-        text-align: center;
+    .resto__a__top
+    {
+        height: 200px;
     }
-
     .heading--h2--resto
     {
         margin-bottom: 20px;
-    }
-    .footer__logo, .footer__nav
-    {
-        max-width: 50%;
-        margin-left: 35%;
-        
     }
 }
 
