--- a/css/main.css
+++ b/css/main.css
@@ -107,6 +107,7 @@ body {
   transform: scale(1.05);
 }
 
+/* MEDIA QUERIES */
 @media (min-width: 600px) {
   .button--explo {
     max-width: 40%;
@@ -294,6 +295,7 @@ body {
   box-shadow: 0 3px 10px #adadad;
 }
 
+/* MEDIA QUERIES */
 @media (min-width: 600px) {
   .fonction, .heading--h2--resto, .resto__ul {
     max-width: 60%;
@@ -306,12 +308,12 @@ body {
 }
 @media (min-width: 1100px) {
   .fonction, .heading--h2--resto, .resto__ul {
-    max-width: 30%;
+    max-width: 40%;
     margin: auto;
   }
 
   .resto__a__top {
-    height: 200px;
+    height: 250px;
   }
 
   .heading--h2--resto {
@@ -430,6 +432,7 @@ body {
   opacity: 1;
 }
 
+/* MEDIA QUERIES */
 @media (min-width: 600px) {
   .heading--h1--commande {
     display: inline-block;
@@ -478,6 +481,7 @@ body {
   color: white;
 }
 
+/* MEDIA QUERIES */
 @media (min-width: 600px) {
   .footer__logo, .footer__nav {
     max-width: 60%;
@@ -487,7 +491,7 @@ body {
 @media (min-width: 1100px) {
   .footer__logo, .footer__nav {
     max-width: 50%;
-    margin-left: 35%;
+    margin-left: 30%;
   }
 }
 
