--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -18,6 +18,8 @@
     }
 }
 
+/* MEDIA QUERIES */
+
 @media (min-width: 600px)
 {
     .footer__logo, .footer__nav
@@ -32,7 +34,7 @@
     .footer__logo, .footer__nav
     {
         max-width: 50%;
-        margin-left: 35%;
+        margin-left: 30%;
         
     }
 }
