--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -123,6 +123,7 @@
     box-shadow: $box-shadow;
 }
 
+/* MEDIA QUERIES */
 @media (min-width: 600px)
 {
     .fonction, .heading--h2--resto, .resto__ul
@@ -140,12 +141,12 @@
 {
     .fonction, .heading--h2--resto, .resto__ul
     {
-        max-width: 30%;
+        max-width: 40%;
         margin: auto;
     }
     .resto__a__top
     {
-        height: 200px;
+        height: 250px;
     }
     .heading--h2--resto
     {
