--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,3 +1,76 @@
+/* POLICES */
+
+/* shrikhand-regular - latin */
+@font-face {
+    font-family: 'Shrikhand';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/shrikhand-v6-latin-regular.eot'); /* IE9 Compat Modes */
+    src: local(''),
+         url('/polices/shrikhand-v6-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('/polices/shrikhand-v6-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+         url('/polices/shrikhand-v6-latin-regular.woff') format('woff'), /* Modern Browsers */
+         url('/polices/shrikhand-v6-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('/polices/shrikhand-v6-latin-regular.svg#Shrikhand') format('svg'); /* Legacy iOS */
+  }
+  
+/* roboto-100 - latin */
+@font-face {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 100;
+    src: url('/polices/roboto-v27-latin-100.eot'); /* IE9 Compat Modes */
+    src: local(''),
+         url('/polices/roboto-v27-latin-100.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('/polices/roboto-v27-latin-100.woff2') format('woff2'), /* Super Modern Browsers */
+         url('/polices/roboto-v27-latin-100.woff') format('woff'), /* Modern Browsers */
+         url('/polices/roboto-v27-latin-100.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('/polices/roboto-v27-latin-100.svg#Roboto') format('svg'); /* Legacy iOS */
+  }
+  
+  /* roboto-300 - latin */
+  @font-face {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 300;
+    src: url('/polices/roboto-v27-latin-300.eot'); /* IE9 Compat Modes */
+    src: local(''),
+         url('/polices/roboto-v27-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('/polices/roboto-v27-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
+         url('/polices/roboto-v27-latin-300.woff') format('woff'), /* Modern Browsers */
+         url('/polices/roboto-v27-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('/polices/roboto-v27-latin-300.svg#Roboto') format('svg'); /* Legacy iOS */
+  }
+  
+  /* roboto-regular - latin */
+  @font-face {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    src: url('/polices/roboto-v27-latin-regular.eot'); /* IE9 Compat Modes */
+    src: local(''),
+         url('/polices/roboto-v27-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('/polices/roboto-v27-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+         url('/polices/roboto-v27-latin-regular.woff') format('woff'), /* Modern Browsers */
+         url('/polices/roboto-v27-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('/polices/roboto-v27-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
+  }
+
+  /* roboto-500 - latin */
+  @font-face {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    src: url('/polices/roboto-v27-latin-500.eot'); /* IE9 Compat Modes */
+    src: local(''),
+         url('/polices/roboto-v27-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('/polices/roboto-v27-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
+         url('/polices/roboto-v27-latin-500.woff') format('woff'), /* Modern Browsers */
+         url('/polices/roboto-v27-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('/polices/roboto-v27-latin-500.svg#Roboto') format('svg'); /* Legacy iOS */
+  }
+  
+
 /* GENERAL */
 *
 {
@@ -8,23 +81,23 @@
 }
 
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Roboto", Arial, Helvetica, sans-serif;
     color: black;
 }
 
 /* TITRES ET TEXTES */
 .heading{
     &--h1{
+        font-family: "Shrikhand", Arial, Helvetica, sans-serif;
         font-size: 24px;
         &--explo{
         text-align: center;
         padding: 0 30px 15px 30px;
+        font-family: "roboto", Arial, Helvetica, sans-serif;
         }
         &--commande{
-            margin-bottom: 40px;
-            font-size: 30px;
-            font-weight: bolder;
-            font-style: italic;
+            margin-bottom: 30px;
+            font-size: 26px;
         }
     }
     &--h2{
@@ -35,7 +108,7 @@ body{
             margin-bottom: 20px;  
         }
         &--entree{
-            font-size: 18px;
+            font-size: 17px;
             text-transform: uppercase;
             font-weight: 300;
         }
@@ -44,7 +117,7 @@ body{
     &--h3{
         margin-bottom: 6px;
         &--commande{
-            font-size: 16px;
+            font-size: 17px;
             font-weight: 600;
         }
     }
@@ -54,6 +127,7 @@ body{
 .text{
     &--local{
         font-size: 1.1em;
+        font-weight: 400;
     }
     &--search{
         text-align: center;
@@ -63,15 +137,19 @@ body{
     }
     &--resto{
         font-size: 1.1em;
-        font-weight: 500;
+        font-weight: 300;
     }
     &--nouveau{
-        font-weight: 600;
+        font-weight: 500;
         color: darken($third-color, 40%);
         font-size: 0.85em;
     }
     &--commande{
-        font-size: 0.85em;
+        font-size: 14px;
+        font-weight: 300;
+        &--bold{
+            font-weight: 500;
+        }
     }
 }
 
@@ -83,8 +161,15 @@ body{
 .a{
     color: black;
     text-decoration: none;
+    &--fonction{
+        font-weight: 500;
+    }
     &--explo{
         color: white;
+        font-weight: 400;
+    }
+    &--footer{
+        font-weight: 300;
     }
     
 }
