--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -3,11 +3,14 @@
 $primary-color: #9356DC;
 $secondary-color: #FF79DA;
 $third-color: #99E2D0;
+$backgrey: rgb(173, 173, 173);
 $text-light: white;
 $text-dark: black;
 $background: rgb(245, 245, 245);
+$background-button: linear-gradient(to top, $primary-color, $secondary-color);
+$background-button-hover: linear-gradient(to top, lighten($primary-color, 5%), lighten($secondary-color, 5%));
 $padding-section: 40px 20px 50px 20px;
-$box-shadow : 0 3px 10px rgb(173, 173, 173)
+$box-shadow : 0 3px 10px $backgrey;
 
 
 
