--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -34,6 +34,10 @@
         {
             max-width: 40%;
         }
+        &--commande
+        {
+            max-width: 40%;
+        }
     }
 }
 
