--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -148,6 +148,7 @@ body{
         font-size: 14px;
         font-weight: 300;
         &--bold{
+            font-size: 15px;
             font-weight: 500;
         }
     }
