--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -3,6 +3,8 @@
     padding-top: 25px;
     padding-bottom: 10px;
     text-align: center;
+    z-index: 2;
+    background: white;
     &__logo{
             &__a{
                 position: relative;
@@ -26,4 +28,15 @@
     display: flex;
     align-items: baseline;
     
+}
+
+@media (min-width: 600px)
+{
+    .header
+    {
+        width: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
 }
