--- a/scss/layouts/_page_menu.scss
+++ b/scss/layouts/_page_menu.scss
@@ -12,9 +12,13 @@
     }
 }
 
-@media (min-width: 600px){
-    .platphoto{
-        &__img{
+@media (min-width: 600px)
+{
+    .platphoto
+    {
+        max-height: 500px;
+        &__img
+        {
             max-width: 100%;
         }
     }
@@ -37,6 +41,10 @@
         position: absolute;
         top: 45px;
         right: 40px;
+        &__ico
+        {
+            height: 25px;
+        }
     }
     &__bordure{
         width: 50%;
@@ -56,29 +64,23 @@
         border-radius: 15px;
         box-shadow: $box-shadow;
         background-color: white;
+        &__detail{
+            width: 75%;
+            white-space : nowrap; 
+            overflow : hidden; 
+            text-overflow: ellipsis; 
+        }
         &__center{
-            display: flex;
-            justify-content: center;
-            align-items: flex-end;
             position: absolute;
             top: 38px;
             right: 0px;
-            padding-right: 25px;          
+            padding-right: 30px;          
             background-color: white;
-            z-index: 2;
-            &__points
-            {
-                flex: 0 0 auto;
-                padding-top: 2px;
-                opacity: 0;
-                &--opa{
-                    opacity: 1;
-                    margin-right: 26px;
-                }
-            }
+            transform: translateX(0px);
+            transition: transform 200ms ease-out;
             &__price
             {
-                flex: 0 0 auto;
+                width: 25%;
                 padding-top: 2px;
                 background-color: white;
                 &__provence{
@@ -89,17 +91,18 @@
         &__right
         {
             height: 100%;
-            width: 60px;
+            width: 17%;
             position: absolute;
             top: 0;
             right: 0px;
-            transform: translateX(60px);
             display: flex;
             justify-content: center;
             align-items: center;
             background-color: $third-color;
             border-radius: 0 15px 15px 0;
             opacity: 0;
+            transform: translateX(60px);
+            transition: transform 200ms ease-out, opacity 300ms ease-out;
             &__cont
             {
                 width: 25px;
@@ -120,13 +123,12 @@
             display: flex;
             transform: translateX(-60px);
         }
-        &:hover .commande__li__center__points{
-            margin-right: 12px;
-            opacity: 1;
+        &:hover .commande__li__detail
+        {
+            width: 61%;
         }
         &:hover .commande__li__right
         {
-            display: flex;
             transform: translateX(0px);
             opacity: 1;
         }
