--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -12,5 +12,77 @@ $background-button-hover: linear-gradient(to top, lighten($primary-color, 5%), l
 $padding-section: 40px 20px 50px 20px;
 $box-shadow : 0 3px 10px $backgrey;
 
+/* Keyframes */
 
+@keyframes loader-page
+{
+    0%{
+        opacity: 1;
+    }
+    25%
+    {
+        opacity: 1;
+    }
+    90%
+    {
+        opacity: 1;
+        animation-timing-function: ease-in-out;
+    }
+    100%{
+        opacity: 0;
+    }
+
+}
+
+@keyframes loader-progress
+{
+    0%{
+        opacity: 0;
+    }
+    25%
+    {
+        opacity: 1;
+    }
+    50%
+    {
+        opacity: 1;
+        animation-timing-function: ease-in-out;
+    }
+    90%
+    {
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+    }
+
+}
+
+@keyframes loader-barre
+{
+    0%{
+        transform: scaleX(0);
+        animation-timing-function: ease-out;
+    }
+    25%
+    {
+        transform: scaleX(0.20);
+        animation-timing-function: ease-in-out;
+        animation-timing-function: normal;
+    }
+    50%
+    {
+        transform: scaleX(0.40);
+        animation-timing-function: ease-out;
+    }
+    90%
+    {
+        transform: scaleX(1);
+        
+    }
+    100%{
+        transform: scaleX(1);
+    }
+
+}
 
