--- a/css/main.css
+++ b/css/main.css
@@ -260,6 +260,7 @@ body {
 .background {
   height: 50px;
   background-color: #e9e8e8;
+  box-shadow: 0px 10px 8px grey;
 }
 
 .explo {
@@ -322,23 +323,23 @@ body {
 }
 .resto__a__top__1 {
   position: relative;
-  background: url(/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg) no-repeat;
+  background: url(images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg) no-repeat;
   background-size: cover;
   background-position: bottom center;
 }
 .resto__a__top__2 {
   position: relative;
-  background: url(/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg) no-repeat;
+  background: url(images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg) no-repeat;
   background-size: cover;
   background-position: center -145px;
 }
 .resto__a__top__3 {
-  background: url(/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg) no-repeat;
+  background: url(images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg) no-repeat;
   background-size: cover;
   background-position: center -50px;
 }
 .resto__a__top__4 {
-  background: url(/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg) no-repeat;
+  background: url(images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg) no-repeat;
   background-size: cover;
   background-position: center -55px;
 }
