--- a/css/main.css
+++ b/css/main.css
@@ -202,7 +202,6 @@ body {
 }
 .ico--footer--2 {
   width: 13px;
-  transform: rotateY(30%);
 }
 
 /* Icones en ligne Font Awesome */
@@ -246,6 +245,7 @@ body {
   top: 42px;
   display: flex;
   align-items: baseline;
+  z-index: 1;
 }
 
 @media (min-width: 600px) {
@@ -259,8 +259,18 @@ body {
 /* SECTION EXPLO */
 .background {
   height: 50px;
+  position: relative;
   background-color: #e9e8e8;
-  box-shadow: 0px 10px 8px grey;
+}
+.background::before {
+  content: " ";
+  height: 4px;
+  width: 100%;
+  position: absolute;
+  top: -4px;
+  left: 0;
+  opacity: 0.3;
+  box-shadow: 0px 3px 3px #858585;
 }
 
 .explo {
