--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -1,8 +1,21 @@
 /* SECTION EXPLO */
-.background{
+.background
+{
     height: 50px;
+    position: relative;
     background-color: rgb(233, 232, 232);
-    box-shadow: 0px 10px 8px grey;
+    &::before
+    {
+        content: " ";
+        height: 4px;
+        width: 100%;
+        position: absolute;
+        top: -4px;
+        left: 0;
+        opacity: 0.3;
+        box-shadow: 0px 3px 3px #858585;
+
+    }
 }
 .explo{
     padding: $padding-section;
